--- a/package.json
+++ b/package.json
@@ -15,5 +15,9 @@
   "devDependencies": {
     "vitepress": "^1.1.0",
     "@types/node": "^20.12.7"
+  },
+  "dependencies": {
+    "pdf-lib": "^1.17.1",
+    "puppeteer": "^22.12.0"
   }
 }
