--- a/.github/workflows/generate-pdf.yml
+++ b/.github/workflows/generate-pdf.yml
@@ -31,12 +31,10 @@ jobs:
         run: node generatePdf.js
 
       - name: Commit and push PDF
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        uses: actions/checkout@v3
         run: |
           git config --global user.name "github-actions[bot]"
           git config --global user.email "github-actions[bot]@users.noreply.github.com"
           git add GovernanceApigee.pdf
-          git commit -m "Add generated PDF"
-          git push origin master
-
+          git commit -m "Add GovernanceApigee.pdf"
+          git push
