--- a/.github/workflows/generate-pdf.yml
+++ b/.github/workflows/generate-pdf.yml
@@ -5,6 +5,9 @@ on:
     branches:
       - master
 
+permissions:
+  contents: write
+  pull-requests: write
 jobs:
   generate-pdf:
     runs-on: ubuntu-latest
